src/test/deca/context/invalid/object/badThis.deca
class Y
{

}
class X
{
  int a;
  boolean b = true;
}


class B
{
  Y y = new Y();
  float a;

}
{
  Y e = this;
}
